src/objects/Metadata_Property__c.object
<CustomObject>
    <description>Joins System Permissions to Profile or Role record via pseudo relationship managed in apex.</description>
    <fields>
        <fullName>Metadata_ID__c</fullName>
        <description>Profile or Role ID.</description>
        <inlineHelpText>Profile or Role ID.</inlineHelpText>
        <label>Metadata ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Name__c</fullName>
        <description>Name of Profile or Role.</description>
        <inlineHelpText>Name of Profile or Role.</inlineHelpText>
        <label>Metadata Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <label>Metadata Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Properties__c</fullName>
        <label>Properties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Case Override - CSR_CreateCase</fullName>
                </value>
                <value>
                    <fullName>Edit Case Override - CSR_EditCase</fullName>
                </value>
                <value>
                    <fullName>New Case Override - CreateCasev2</fullName>
                </value>
                <value>
                    <fullName>Delete Tasks</fullName>
                </value>
                <value>
                    <fullName>QA Administrator</fullName>
                </value>
                <value>
                    <fullName>Opportunity Override</fullName>
                </value>
                <value>
                    <fullName>Price Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Metadata_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Properties__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Prop - {0000}</displayFormat>
        <label>Metadata Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>